syntax = "proto3";

package product;

service ProductService {
  rpc GetProduct(GetProductRequest) returns (GetProductResponse);
  rpc UpdateProduct(UpdateProductRequest) returns (UpdateProductResponse);
}

message GetProductRequest {
  string id = 1;
}

message GetProductResponse {
  string id = 1;
  string name = 2;
  string description = 3;
  string price = 4;
  string ownerId = 5;
}

message UpdateProductRequest {
  string id = 1;
  string name = 2;
  string description = 3;
  string price = 4;
  string ownerId = 5;
}

message UpdateProductResponse {
  string id = 1;
  string name = 2;
  string description = 3;
  string price = 4;
  string ownerId = 5;
}
